--- a/application/views/paymentForm.html
+++ b/application/views/paymentForm.html
@@ -113,19 +113,25 @@
 							<div class="row form-group">
 								<label class="col-md-3 control-label" align="right">VISA No.</label>
 								<div class="col-md-9">
-									<input type="text" class="form-control" id="visano" autofocus>
+									<input type="text" class="form-control" id="visano" name="visano" autofocus>
 								</div>
 							</div>
 							<div class="row form-group">
 								<label class="col-md-3 control-label" align="right">Password</label>
 								<div class="col-md-9">
-									<input type="password" class="form-control" id="visapw" >
+									<input type="password" class="form-control" id="visapw" name="visapw">
 								</div>
 							</div>
 							<div class="row form-group">
 								<label class="col-md-3 control-label" align="right">Send Address</label>
 								<div class="col-md-9">
-									<input type="text" class="form-control" id="sendaddress">
+									<input type="text" class="form-control" id="sendaddress" name="sendaddress">
+								</div>
+							</div>
+							<div class="row form-group">
+								<label class="col-md-3 control-label" align="right">Expired Date</label>
+								<div class="col-md-9">
+									<input type="text" class="form-control" id="expireddate" name="expireddate">
 								</div>
 							</div>
 							<div class="row form-group">
@@ -133,8 +139,8 @@
 								
 								</div>
 								<div class="col-md-9">
-									<a href="cart.html"><button type="submit" class="btn btn-default" >Cancel</button></a>
-									<button type="submit" class="btn btn-success" >Submit</button>
+									<a href="cart.html"><button type="button" class="btn btn-default" >Cancel</button></a>
+									<button type="submit" value="Submit" class="btn btn-success" >Submit</button>
 								</div>
 							</div>
 						</div>
