--- a/application/views/newMessage.html
+++ b/application/views/newMessage.html
@@ -76,7 +76,7 @@
             ?>-->
 
             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
-              <form class="form-horizontal">
+              <form class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()">
               
                   <div class="row centered" style="margin-right:20px">
                     <fieldset>
@@ -85,19 +85,19 @@
                         <div class="form-group">
                           <label for="inputEmail" class="col-lg-2 control-label">Send to :</label>
                           <div class="col-lg-10">
-                            <input type="text" class="form-control" id="msgReceiver" placeholder="Enter username here." >
+                            <input type="text" class="form-control" id="msgReceiver" name="msgReceiver" placeholder="Only a-z, A-Z, 0-9" >
                           </div>
                         </div>
                         <div class="form-group">
                           <label for="inputTopic" class="col-lg-2 control-label">Topic :</label>
                           <div class="col-lg-10">
-                            <input type="text" class="form-control" id="msgSubject" placeholder="Messege's topic.">
+                            <input type="text" class="form-control" id="msgSubject" name="msgSubject" placeholder="Messege's topic.">
                           </div>
                         </div>
                         <div class="form-group">
                           <label for="inputMsg" class="col-lg-2 control-label">Message :</label>
                           <div class="col-lg-10">
-                            <textarea rows="4" class="form-control" id="msgText" placeholder="type your messege here."></textarea>
+                            <textarea rows="4" class="form-control" id="msgText" name="msgText" placeholder="type your messege here."></textarea>
                           </div>
                         </div>
                       </div>
@@ -107,7 +107,7 @@
                   <div class="col-lg-2">
                   </div>
                   <div class="col-lg-10">
-                    <a href="message_c/sendMessage"><button type="button" class="btn btn-warning">Send</button></a>
+                    <a href="message_c/sendMessage"><button type="button" value="Submit" class="btn btn-warning">Send</button></a>
                   <a href="message_c/manageMessageBox"><button type="button" class="btn btn-default" >Cancel</button></a>
                   </div>
                 </div>
@@ -126,6 +126,29 @@
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+  <script src="assets/js/validation_function.js"></script>
+  <script>
+    function validateForm() {
+      var receiver = document.forms["message-form"]["msgReceiver"].value;
+      var subject = document.forms["message-form"]["msgSubject"].value;
+      var text = document.forms["message-form"]["msgText"].value;
 
+      var message ="";
+
+      if (!validateReceiver(receiver) ) {
+        alert("Receiver name is invalid.");
+        return false;
+      }
+      if (!validateSubject(subject) ) {
+        alert("The subject is invalid.");
+        return false;
+      }
+      if (!validateMessageText(text) ) {
+        alert("Text is invalid.");
+        return false;
+      }
+      
+  }
+  </script>
 </body>
 </html>
