--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -85,7 +85,7 @@
 						<div class="form-group" >
 							<label style="left:20%" for="inputPassword" class="col-sm-2 control-label">Password</label>
 							<div class="col-sm-10">
-								<input style="width:50%" type="password" class="form-control" size="20" id="password" name="passwordd">
+								<input style="width:50%" type="password" class="form-control" size="20" id="password" name="password">
 							</div>
 						</div>
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
