--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -69,7 +69,7 @@
 	<!-- ======================================================================= -->
 	<!-- Log in form -->
 	
-   	<?php //echo form_open('login_c'); ?>
+   	<?php echo form_open('login_c'); ?>
 	<div class="signin">
 		<form class="form-horizontal" id="login-form" name="login-form" onsubmit="return validateForm()">
 			<div class="row centered">
