--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -9,18 +9,9 @@
   <body>
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home_c">DUMB<i class="fa fa-circle"></i>BAY</a>
-        </div>
-        <div class="navbar-collapse collapse">
+
           <?php
+            //echo $username;
             include 'buyer_menu.html'
           ?>
         </div><!--/.nav-collapse -->
