--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -117,48 +117,10 @@
                       <div class="row col-md-2">
                         <a href="#">more info...</a>
                       </div>
-                      <div class="row col-md-9">
+                      <div class="row col-md-8">
                       </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-9">
-                      </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
+                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
+                        <button class="btn btn-danger" type="button">remove</button>
                       </div>
                     </div>
                   </div>
@@ -193,10 +155,10 @@
                       <div class="row col-md-2">
                         <a href="#">more info...</a>
                       </div>
-                      <div class="row col-md-9">
+                      <div class="row col-md-8">
                       </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
+                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
+                        <button class="btn btn-danger" type="button">remove</button>
                       </div>
                     </div>
                   </div>
@@ -231,10 +193,48 @@
                       <div class="row col-md-2">
                         <a href="#">more info...</a>
                       </div>
-                      <div class="row col-md-9">
+                      <div class="row col-md-8">
                       </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
+                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
+                        <button class="btn btn-danger" type="button">remove</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="assets/img/iphone6.jpg" width="185" height="104">
+                </div>
+                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
+                  <div>
+                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
+                      <div class="col-md-6">
+                        <h3>iPhone 6</h3>
+                      </div>
+                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
+                        200,000 bath
+                      </div>
+                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
+                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
+                      </div>
+                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
+                      2,000,000 bath
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="row col-md-1">
+                      </div>
+                      <div class="row col-md-2">
+                        <a href="#">more info...</a>
+                      </div>
+                      <div class="row col-md-8">
+                      </div>
+                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
+                        <button class="btn btn-danger" type="button">remove</button>
                       </div>
                     </div>
                   </div>
@@ -243,7 +243,7 @@
             </li>
             
           </ol>
-          <div class="row" stlye="padding-bottom:50px">
+          <div class="row" style="padding-bottom:0px">
 
             <div class="row col-md-2" style="padding-left:30px">
               <button type="button" class="btn btn-default"> Save my cart </button>
