--- a/application/views/sale.html
+++ b/application/views/sale.html
@@ -94,6 +94,7 @@
               <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
                 <div class="row">
                   <div class="col-md-6">
+                    <button type="button" class="btn btn-success btn-lg">Add</button>
                   </div>
                   <div class="col-md-5">
                     <input type="text" class="form-control" id="inputDirectSaleSearch" placeholder="Search...">
@@ -112,42 +113,92 @@
                   <div class="col-md-4">
                     <h3>iPhone 6</h3>
                     <strong>Due date: </strong>12 Dec 14<br>
+                    
                     <a href="#">more info...</a>
                   </div>
                   <div class="col-md-5">
-                    <div class="row" style="padding-top:10px">
+                    <div class="row" style="padding-top:30px">
                       <div class="col-md-12">
-                        <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr<br><strong>bidding: </strong>manual<br><strong>your max bid: </strong>-
+                        <strong>sell type: </strong>direct sale<br>
+                        <strong>current bid: </strong>200 bath<br>
                       </div>
                     </div>
-                    <div class="row">
-                      <br>
-                      <div class="col-md-2">
-                        <button type="button" class="btn btn-default">Bid</button>
+                    <div class="row" style="padding-top:10px">
+                      <div class="col-md-4">
+                        <select class="form-control" id="select">
+                          <option>on sale</option>
+                          <option>sold</option>
+                          <option>paid</option>
+                          <option>shipped</option>
+                        </select>
                       </div>
-                      <div class="col-md-10">
-                        
-                        <div class="row">
-                          <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
-
-                          <div class="form-group col-md-7" style="left:0%; padding-right:0px">
-                            <div class="input-group">
-                  
-                              <input type="text" class="form-control"  placeholder="Enter max bid">
-                              <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">Bid</button>
-                              </span>
-                            </div>
-                          </div>
-
-                        </div>
-
+                      <div class="col-md-1"></div>
+                      <div class="col-md-2" style="padding-left:30px">
+                        <button type="button" class="btn btn-default">Edit</button>
                       </div>
+                      <div class="col-md-1"></div>
+                      <div class="col-md-3">
+                        <button type="button" class="btn btn-danger">Remove</button>
+                      </div>
+                      
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
+                <div class="row">
+                  <div class="col-md-3">
+                    <img src="assets/img/iphone6.jpg" width="185" height="104">
+                  </div>
+                  <div class="col-md-4">
+                    <h3>iPhone 6</h3>
+                    <strong>Due date: </strong>12 Dec 14<br>
+                    
+                    <a href="#">more info...</a>
+                  </div>
+                  <div class="col-md-5">
+                    <div class="row" style="padding-top:30px">
+                      <div class="col-md-12">
+                        <strong>sell type: </strong>bidding sale<br>
+                        <strong>current bid: </strong>50 bath<br>
+                      </div>
+                    </div>
+                    <div class="row" style="padding-top:10px">
+                      <div class="col-md-4">
+                        <select class="form-control" id="select">
+                          <option>on sale</option>
+                          <option>sold</option>
+                          <option>paid</option>
+                          <option>shipped</option>
+                        </select>
+                      </div>
+                      <div class="col-md-1"></div>
+                      <div class="col-md-2" style="padding-left:30px">
+                        <button type="button" class="btn btn-default">Edit</button>
+                      </div>
+                      <div class="col-md-1"></div>
+                      <div class="col-md-3">
+                        <button type="button" class="btn btn-danger">Remove</button>
+                      </div>
+                      
                     </div>
                   </div>
                 </div>
               </li>
             </ol>
+            <div class="row" style="padding-bottom:20px">
+
+              <div class="row col-md-10" style="padding-left:30px">
+                
+              </div>
+              <div class="row col-md-1">
+                <button type="button" class="btn btn-default"> Save </button>
+              </div>
+              <div class="row col-md-1" style="padding-left:50px">
+                <button type="button" class="btn btn-default"> Cancel </button>
+              </div>
+              
+           </div>
           </div>
 
         </div>
