--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -11,12 +11,13 @@
     <title>DUMBOBAY - shopping area</title>
 
     <!-- Bootstrap core CSS -->
-  <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
-  <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
-  <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
+          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -88,12 +89,11 @@
           </div>
 				</div>
         
-        <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
+        <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
           <ol style="list-style-type:none; padding-left: 0px">
             <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
                 <div class="col-md-6">
-                  <button type="button" class="btn btn-danger">Auto</button>
                 </div>
                 <div class="col-md-5">
                   <input type="text" class="form-control" id="inputDirectSaleSearch" placeholder="Search...">
@@ -112,6 +112,7 @@
                 <div class="col-md-4">
                   <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
+                  <strong>status: </strong>bidding<br>
                   <a href="#">more info...</a>
                 </div>
                 <div class="col-md-5">
@@ -156,6 +157,7 @@
                 <div class="col-md-4">
                   <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
+                  <strong>status: </strong>bidding<br>
                   <a href="#">more info...</a>
                 </div>
                 <div class="col-md-5">
@@ -198,6 +200,7 @@
                 <div class="col-md-4">
                   <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
+                  <strong>status: </strong>bidding<br>
                   <a href="#">more info...</a>
                 </div>
                 <div class="col-md-5">
@@ -242,6 +245,7 @@
                 <div class="col-md-4">
                   <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
+                  <strong>status: </strong>bidding<br>
                   <a href="#">more info...</a>
                 </div>
                 <div class="col-md-5">
