--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -259,11 +259,12 @@
                               echo $row->Price.' baht';
                             echo '</div>';
                             echo '<div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">';
-                            echo'<form name="form" action = "" method="get">';
+                            echo'<form name="form" action = "cart_c/editAmount/'.$row->Product_ID.
+                              '" method="post">';
                               echo '<input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" name="'.$row->Product_ID.'"
                               id="'.$row->Product_ID.'" placeholder="'.$row->Quantity.'" >';
-                              echo'<a href="cart_c/editAmount/'.$row->Product_ID.
-                              '/'.$_GET[$row->Product_ID].'"><button type="submit" class="btn btn-default"> Edit Amount </button></a>';
+
+                              echo'<button type="submit" class="btn btn-default"> Edit Amount </button>';
                               echo'</form>';
                               
                             echo '</div>';
