--- a/application/views/viewMessage.html
+++ b/application/views/viewMessage.html
@@ -5,22 +5,9 @@
 ?>-->
 <htlm lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>DUMBOBAY - shopping area</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <?php
+    include 'HTMLHeader.html';
+  ?>
 
    
 
@@ -34,33 +21,21 @@
 
     <body>
 
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
-          </div>
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">PRODUCT</a></li>
-              <li><a href="#">MY CART</a></li>
-              <li ><a href="#">WATCH LIST</a></li>
-              <li><a href="#">ORDER</a></li>
-              <li class="active"><a href="#">MSG BOX</a></li>
-              <li><a href="#">HISTORY</a></li>
-              <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-              <li><a href="index.html">SIGN OUT</a></li>
-              <li><a href="#">| Pookpik |</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+      <!-- Fixed navbar -->
+  <?php
+      // if($type==0){
+      //   include 'guest_menu.html';
+      // }
+      // else if($type==1){
+      //   include 'admin_menu.html';  
+      // }            
+      // else if($type==2){
+      //   include 'buyer_menu.html';  
+      // }
+      // else if($type==3){
+      //   include 'seller_menu.html'; 
+      // }
+    ?>
 
       <!-- msg part-->
       <div>
@@ -77,7 +52,7 @@
           <div class="row">
             <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
             <div class="col-lg-6">
-              <a href="messageBox.html"><button type="button" class="btn btn-default" style="margin-top:-10px;margin-bottom:20px">All Messages</button></a>
+              <a href="<?php echo site_url('message_c/manageMessageBox') ?>"><button type="button" class="btn btn-default" style="margin-top:-10px;margin-bottom:20px">All Messages</button></a>
             </div>
             <div class="col-lg-6">
               
@@ -85,11 +60,6 @@
           </div><!-- row -->
           
         </div>
-            <!--<?php
-            if(this->session->flashdata('message')){
-              //show a pop-up displaying 'Your message has been sent.'
-            }
-            ?>-->
 
             <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
               <form class="form-horizontal">
@@ -97,23 +67,30 @@
                   <div class="row">
                     <fieldset>
                       <h3 align="center">View Message</h3>
+                      <?php
+                        foreach ($message->result() as $msg){
+                          $from = $msg->Sender_Name;
+                          $topic = $msg->Subject;
+                          $text = $msg->Text;
+                        }
+                      ?>
                       <div>
                         <div class="form-group">
                           <label for="inputEmail" class="col-lg-2 control-label" align="right">From :</label>
                           <div class="col-lg-10">
-                            <p>Natchez@dumbobay.com</p>
+                            <p><? echo $from; ?></p>
                           </div>
                         </div>
                         <div class="form-group">
                           <label for="inputTopic" class="col-lg-2 control-label" align="right">Topic :</label>
                           <div class="col-lg-10">
-                            <p>I need small ears</p>
+                            <p><? echo $topic; ?></p>
                           </div>
                         </div>
                         <div class="form-group">
                           <label for="inputMsg" class="col-lg-2 control-label" align="right">Messege :</label>
                           <div class="col-lg-10">
-                            <p>Do you have small ears? I want to buy them. pls post your product as a direct sale or an auction product. I dreamed a dream having small ears.</p>
+                            <p><? echo $text; ?></p>
                           </div>
                         </div>
                       </div>
