--- a/application/views/guest_menu.html
+++ b/application/views/guest_menu.html
@@ -12,7 +12,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="home_c">HOME</a></li>
 					<li><a href="home_c/login">SIGN IN</a></li>
-					<li><a href="home_c/logout">SIGN UP</a></li>
+					<li><a href="home_c/register">SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
