--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -40,8 +40,8 @@
 	<!-- Log in form -->
 	
 	<div class="container">
-		<?php echo form_open('login_c','class="form-horizontal" id="login-form" name="login-form" onsubmit="return validateForm()"'); ?>
-		<form class="form-horizontal" id="register-form" name="register-form" onsubmit="return validateForm()">
+		<?php echo form_open('member_c/createMember','class="form-horizontal" id="register-form" name="register-form" onsubmit="return validateForm()"'); ?>
+		<!--<form class="form-horizontal" id="register-form" name="register-form" onsubmit="return validateForm()">-->
 			<div>
 				<fieldset>
 					<legend align="center" style="padding-top:10px"><h1>SIGN UP</h1></legend>
