--- a/application/views/index.html
+++ b/application/views/index.html
@@ -14,26 +14,10 @@
 <body>
 
 	<!-- Fixed navbar -->
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="home_c" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="home_c">HOME</a></li>
-					<!--<li><a data-toggle="modal" data-target="#myModal" href="#myModal" class="signin">SIGN IN</a></li>-->
-					<li><a href="home_c/login">SIGN IN</a></li>
-					<li><a href="home_c/register">SIGN UP</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</div>
+  <?php
+         include 'guest_menu.html';
+         
+    ?>
 	<!-- =======================================================================-->
 	<div id="headerwrap">
 		<div class="container">
