--- a/application/views/product.html
+++ b/application/views/product.html
@@ -224,7 +224,7 @@
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src=<?echo base_url("?>assets/js/bootstrap.min.js");?>></script>
+	<script src=<?echo base_url("assets/js/bootstrap.min.js");?>></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 	<script src=<?echo base_url("assets/js/validation_function.js");?>></script>
