--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -13,7 +13,13 @@
 			margin-right: auto;
 		}
 	</style>  
- 
+ 	<?php
+	if($this->session->flashdata('message')) echo '
+		<script>
+			alert("Pass");
+		</script>
+		';
+?>
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
