--- a/application/views/guest_menu.html
+++ b/application/views/guest_menu.html
@@ -10,9 +10,9 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="home_c">HOME</a></li>
-					<li><a href="home_c/login">SIGN IN</a></li>
-					<li><a href="home_c/register">SIGN UP</a></li>
+					<li><a href=<?php echo site_url('home_c'); ?>>HOME</a></li>
+					<li><a href=<?php echo site_url('home_c/login'); ?>>SIGN IN</a></li>
+					<li><a href=<?php echo site_url('home_c/register'); ?>>SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
