--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -57,7 +57,7 @@
 								<input style="width:50%" type="password" class="form-control" size="20" id="password" name="password">
 							</div>
 						</div>
-						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+						<a href=<?php echo site_url('home_c'); ?>><button type="button" class="btn btn-default">Cancel</button></a>
 						<button type="submit" value="Submit" class="btn btn-danger">Sign In</button><br><br>
 						<a href="home_c/register"><button type="button" value="login" class="btn btn-info">Sign Up</button></a>
 						<span class="help-block">If you have no account, click Sign Up.</span>
