--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -13,13 +13,7 @@
 			margin-right: auto;
 		}
 	</style>  
- 	<?php
-	if($this->session->flashdata('message')) echo '
-		<script>
-			alert("Pass");
-		</script>
-		';
-?>
+ 	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -56,7 +50,7 @@
 						<div class="form-group">
 							<label class="col-md-3 control-label" align="right">Username</label>
 							<div class="col-md-9">
-								<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" autofocus>
+								<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="A-Z, a-z, 0-9 (maximum 20 characters)" autofocus>
 							</div>
 						</div>
 						<div class="form-group">
@@ -72,27 +66,27 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-md-3 control-label" align="right">Name</label>
+							<label class="col-md-3 control-label" align="right">Firstname</label>
 							<div class="col-md-9">
-								<input style="width:50%" type="text" class="form-control" size="20" id="name" name="name" >
+								<input style="width:50%" type="text" class="form-control" size="20" id="firstname" name="firstname" placeholder="A-Z, a-z (maximum 20 characters)">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-md-3 control-label" align="right">Surname</label>
+							<label class="col-md-3 control-label" align="right">Lastname</label>
 							<div class="col-md-9">
-								<input style="width:50%" type="text" class="form-control" size="20" id="surname" name="surname">
+								<input style="width:50%" type="text" class="form-control" size="20" id="lastname" name="lastname" placeholder="A-Z, a-z (maximum 20 characters)">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="col-md-3 control-label" align="right">Address</label>
 							<div class="col-md-9">
-								<input type="text" class="form-control" size="20" id="address" name="address">
+								<input type="text" class="form-control" size="20" id="address" name="address" placeholder="A-Z, a-z, 0-9, ".", "/", " " (maximum 70 characters)">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="col-md-3 control-label" align="right">Country</label>
 							<div class="col-md-9">
-								<select class="form-control" id="select">
+								<select class="form-control" id="select" style="width:50%">
 						          <option>Thailand</option>
 						        </select>
 							</div>
@@ -100,13 +94,13 @@
 						<div class="form-group">
 							<label class="col-md-3 control-label" align="right">E-mail</label>
 							<div class="col-md-9">
-								<input style="width:50%" type="text" class="form-control" size="20" id="email" name="email">
+								<input style="width:50%" type="text" class="form-control" size="20" id="email" name="email" placeholder="name@mail.com">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="col-md-3 control-label" align="right">Tel.</label>
 							<div class="col-md-9">
-								<input style="width:50%" type="text" class="form-control" size="20" id="telephone" name="telephone">
+								<input style="width:50%" type="text" class="form-control" size="20" id="telephone" name="telephone" placeholder="+(country code)XXXXXXXX">
 							</div>
 						</div>
 						<div class="form-group">
@@ -114,13 +108,13 @@
 							<div class="col-md-9">
 								<div class="radio">
 									<label>
-										<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-										Buyer
+										<input type="radio" name="type" id="type" value="2" checked="">
+										Customer
 									</label>
 								</div>
 								<div class="radio">
 									<label>
-										<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+										<input type="radio" name="type" id="type" value="3">
 										Seller
 									</label>
 								</div>
@@ -131,7 +125,7 @@
 
 							</div>
 							<div class="col-md-9">
-								<button type="button" class="btn btn-default" onclick="clickk()">Cancel</button>
+								<a href=<?php echo site_url('home_c'); ?>><button type="button" class="btn btn-default">Cancel</button></a>
 								<button type="submit" value="Submit" class="btn btn-warning">Submit</button>
 							</div>
 						</div>
@@ -207,5 +201,6 @@
 	}
 
 	</script>
+
 </body>
 </html>
