--- a/application/views/productDesc.html
+++ b/application/views/productDesc.html
@@ -84,7 +84,7 @@
         
         <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
           <div class="row centered" >
-            <img src="assets/img/iphone6.jpg" width="350px" height="300" style="margin:20px 20px">
+            <img src=<?php echo '"'.base_url().'assets/img/'.$product->Image.'"' ?> width="350px" height="300" style="margin:20px 20px">
           </div>
           <div class="row" style="margin-left:40px;margin-right:40px;margin-bottom:40px">
             <h1><?php echo $product->Name; ?></h1><!-- detail of each type (2 type)-->
