Product search &email

--- a/application/views/seller_menu.html
+++ b/application/views/seller_menu.html
@@ -13,6 +13,7 @@
 
             <li><a href="home_c">HOME</a></li>
             <li><a href="home_c/product">PRODUCT</a></li>
+            <li><a href="product_c/newProduct">ADD PRODUCT</a></li>
             <li><a href="home_c/watchlist">WATCH LIST</a></li>
             <li><a href="home_c/message">MSG BOX</a></li>
             <li><a href="home_c/history">HISTORY</a></li>
