--- a/application/views/profile.html
+++ b/application/views/profile.html
@@ -63,7 +63,7 @@
 					<div class="row">
 						<!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
 						<div class="col-lg-6">
-							<a href=<?php site_url('member_c/editProfile'); ?>>
+							<a href=<?php echo site_url('member_c/editProfile'); ?>>
 								<button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">Edit Profile</button>
 							</a>
 						</div>
