--- a/application/views/editProfileForm.html
+++ b/application/views/editProfileForm.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
-
-	<title>DUMBOBAY - shopping area</title>
-
-	<!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="assets/css/main.css" rel="stylesheet">
+	<?php
+    include 'HTMLHeader.html';
+  ?>
 	<style type="text/css">
 		.control-label{
 			padding-top: 4px;
@@ -34,32 +21,20 @@
 <body>
 
 	<!-- Fixed navbar -->
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="#">PRODUCT</a></li>
-					<li><a href="#">MY CART</a></li>
-					<li><a href="#">WATCH LIST</a></li>
-					<li><a href="#">ORDER</a></li>
-					<li><a href="#">MSG BOX</a></li>
-					<li><a href="#">HISTORY</a></li>
-					<!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-					<li><a href="index.html">SIGN OUT</a></li>
-					<li class="active"><a href="#">| Pookpick |</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</div>
+  <?php
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
+    ?>
 	<!-- =======================================================================-->
 	<div id="myheaderwrap">
 		<div class="container">
@@ -78,36 +53,36 @@
 						<h1>Edit Profile</h1>
 					</legend>
 				</div>
-				
+				<?php echo form_open('member_c/editProfile','class="form-horizontal" id="editprofile-form" name="editprofile-form" onsubmit="return validateForm()"'); ?>
 				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;padding-top:20px;margin-bottom:25px">
 					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">Name:</label>
+						<label class="col-md-3 control-label" align="right">Firstname:</label>
 						<div class="col-md-9">
-							<input type="text" class="form-control" id="name" placeholder="Pookpick" autofocus>
+							<input type="text" class="form-control" id="name" placeholder="<?php echo $member->Firstname; ?>" autofocus>
 						</div>
 					</div>
 					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">Surname:</label>
+						<label class="col-md-3 control-label" align="right">Lastname:</label>
 						<div class="col-md-9">
-							<input type="text" class="form-control" id="surname" placeholder="Leelasupakul">
+							<input type="text" class="form-control" id="surname" placeholder="<?php echo $member->Lastname; ?>">
 						</div>
 					</div>
 					<div class="row form-group">
 						<label class="col-md-3 control-label" align="right">Address:</label>
 						<div class="col-md-9">
-							<input type="text" class="form-control" id="address" placeholder="123 Bangrak Bangkok 10400">
+							<input type="text" class="form-control" id="address" placeholder="<?php echo $member->address; ?>">
 						</div>
 					</div>
 					<div class="row form-group">
 						<label class="col-md-3 control-label" align="right">E-mail:</label>						
 						<div class="col-md-9">
-							<input type="text" class="form-control" id="email" placeholder="pookkistaa@gmail.com">
+							<input type="text" class="form-control" id="email" placeholder="<?php echo $member->Email; ?>">
 						</div>
 					</div>
 					<div class="row form-group">
 						<label class="col-md-3 control-label" align="right">Tel.:</label>
 						<div class="col-md-9">
-							<input type="text" class="form-control" id="tel" placeholder="088-888-3333">
+							<input type="text" class="form-control" id="tel" placeholder="<?php echo $member->Telephone; ?>">
 						</div>
 					</div>
 					<div class="row form-group">
@@ -120,6 +95,7 @@
 						</div>
 					</div>
 				</div>
+				</form>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
@@ -136,6 +112,43 @@
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+	<script src=<?php echo base_url("assets/js/validation_function.js");?> ></script>
+	<!--  The form that will be parsed by jQuery before submit  -->
+	<script>
 
+	function validateForm() {
+	    var membername = document.forms["editprofile-form"]["membername"].value;
+	    var name = document.forms["editprofile-form"]["name"].value;
+	    var surname = document.forms["editprofile-form"]["surname"].value;
+	    var address = document.forms["editprofile-form"]["address"].value;
+	    var email = document.forms["editprofile-form"]["email"].value;
+	    var tel = document.forms["editprofile-form"]["telephone"].value;
+
+	    var message ="";
+
+	    if (!validatemembername(membername) ) {
+	    	alert("Your membername is invalid.");
+	    	return false;
+	    }
+
+	    if (!validateName(name)&!validateName(surname)){
+	  		alert("Your firstname or lastname is invalid.");
+	    	return false;
+	  	}
+	  	if (!validateAddress(address)){
+	    	alert("Your address is invalid.");
+	    	return false;
+	    }
+	    if (!validateEmail(email)){
+	    	alert("Your e-mail is invalid.");
+	    	return false;
+	    }
+	    if (!validateTelephone(tel)){
+	    	alert("Your telephone number is invalid.");
+	    	return false;
+	    }
+	}
+
+	</script>
 </body>
 </html>
