--- a/application/views/productDesc.html
+++ b/application/views/productDesc.html
@@ -1,28 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>DUMBOBAY - shopping area</title>
-
-    <!-- Bootstrap core CSS -->
-  <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+<?php
+    include 'HTMLHeader.html';
+  ?>
     <style>
     li.watchlist{
       margin-top: 30px;
@@ -35,33 +16,20 @@
   <body>
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">PRODUCT</a></li>
-            <li><a href="#">MY CART</a></li>
-            <li><a href="#">WATCH LIST</a></li>
-            <li><a href="#">ORDER</a></li>
-            <li><a href="#">MSG BOX</a></li>
-            <li><a href="#">HISTORY</a></li>
-            <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-          	<li><a href="index.html">SIGN OUT</a></li>
-          	<li><a href="#">| Pookpik |</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    <<?php
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
+    ?>
 
   <div id="myheaderwrap">
     <div class="container">
@@ -95,13 +63,13 @@
                 echo '<p>Details: '.'</p>';
             } else {
                 echo '<p>Current Max Bid: '.$product->Current_Max_Bid.' Baht';
-                echo '<br>Time left: '.$product->End_datetime;
+                echo '<br>Time left: '.$product->End_Date;
                 echo '<br>Seller: ';
                 echo '<p>Details: '.'</p>';
             }
             ?>
 
-            <a href="#"><button type="button" class="btn btn-default">Back</button></a>
+            <a href="javascript:window.history.go(-1);"><button type="button" class="btn btn-default">Back</button></a>
           </div>
           <div class="row">
             
@@ -120,6 +88,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+  <script src=<?echo base_url("assets/js/bootstrap.min.js");?>></script>
   </body>
 </html>
