--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -182,7 +182,7 @@
 	    	alert("Name and surname is over 50 characters.");
 	    	return false;
 	    }
-	    if (!validateName(name)&!validateName(surname)){
+	    if (!validateName(name)||!validateName(surname)){
 	  		alert("Your name or surname is invalid.");
 	    	return false;
 	  	}
