--- a/application/views/buyer_menu.html
+++ b/application/views/buyer_menu.html
@@ -19,7 +19,7 @@
             <li><a href="home_c/history">HISTORY</a></li>
             <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
             <li><a href="home_c/logout">SIGN OUT</a></li>
-            <li><a href=<?php echo site_url("member_c/memberDetail/".$member->Username);?>>| <?php echo " ".$member->Firstname." ";?> |</a></li>
+            <li><a href=<?php echo "member_c/memberDetail/".$username;?>>| <?php echo " ".$username." ";?> |</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
