Revert "no message"
This reverts commit 8665f35382b453ea13aeff046398ff372ed158db.

--- a/application/views/add_product.html
+++ b/application/views/add_product.html
@@ -18,6 +18,10 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+
+    <link rel="stylesheet" href="/resources/demos/style.css">
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -176,8 +180,8 @@
 
                 <div class="form-group">
                   <label for="End_Datetime" class="col-md-2 control-label">Expiration Date</label>
-                  <div class="col-md-10">
-                    <input type="text" id="End_Datetime" class="form-control" placeholder="Exp date">
+                  <div class="col-md-4">
+                    <input type="text" id="datepicker" class="hasDatepicker">
                     
                   </div>
                 </div>
